Fixed input styles and button spacing issues

--- a/RadioPlayer/css/style.css
+++ b/RadioPlayer/css/style.css
@@ -207,8 +207,6 @@ h6 {
       float: right;
       position: relative;
       top: 8px; } }
-  .active-shows .button {
-    margin-bottom: 10px; }
 
 .inactive-shows h3 {
   margin: 10px 0px; }
@@ -229,7 +227,7 @@ h6 {
 .show-container {
   display: inline-block;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #e3e3e3;
   margin: 5px 3px; }
 
 .icon {
@@ -253,23 +251,25 @@ h6 {
   font-size: 16px;
   outline: 0;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+  position: relative;
   font-family: 'Ubuntu', sans-serif; }
   @media (min-width: 480px) {
+    .button {
+      padding: 7px 0; } }
+  @media (min-width: 768px) {
     .button {
       padding: 11px 0; } }
 
 .button[disabled="disabled"] {
-  cursor: not-allowed; }
-
-.button:hover {
-  outline: 0; }
+  cursor: not-allowed;
+  border: none; }
 
 /*
 *   Add
 */
 .button-add {
   background-color: #5CA6BF;
-  box-shadow: 0 2px 0 0 #478194;
+  border-bottom: 3px solid #478194;
   color: #fff;
   float: left; }
   @media (min-width: 480px) {
@@ -282,22 +282,22 @@ h6 {
 .button-add:active {
   background-color: #569BB3;
   border-bottom: 0;
-  box-shadow: inset 0 2px 0 0 #478194; }
+  border-top: 3px solid #478194; }
 
 .button-add[disabled="disabled"] {
   background-color: #8FBBC9;
   color: #DAE8ED;
   text-shadow: none;
-  box-shadow: none; }
+  top: 3px; }
 
 /*
-*   Clear Tracks
+*   Clear
 */
 .button-clear {
   float: right;
   background-color: #D65469;
   color: #fff;
-  box-shadow: 0 2px 0 0 #AB4354; }
+  border-bottom: 3px solid #AB4354; }
   @media (min-width: 480px) {
     .button-clear {
       float: none;
@@ -309,13 +309,13 @@ h6 {
 .button-clear:active {
   background-color: #CC5064;
   border-bottom: 0;
-  box-shadow: inset 0 2px 0 0 #AB4354; }
+  border-top: 3px solid #AB4354; }
 
 .button-clear[disabled="disabled"] {
   background-color: #F09CA9;
   color: #FCD9DF;
-  box-shadow: none;
-  text-shadow: none; }
+  text-shadow: none;
+  top: 3px; }
 
 /*
 *   Next
@@ -332,7 +332,7 @@ h6 {
 
 .button-next {
   background-color: #242424;
-  box-shadow: 0 2px 0 0 #0D0D0D;
+  border-bottom: 3px solid #0D0D0D;
   color: #fff; }
   @media (min-width: 768px) {
     .button-next {
@@ -345,13 +345,12 @@ h6 {
 
 .button-next:active {
   background-color: #242424;
-  border-bottom: 0;
-  box-shadow: inset 0 2px 0 0 #0D0D0D; }
+  border-bottom: none;
+  border-top: 3px solid #0D0D0D; }
 
 .button-next[disabled="disabled"] {
   background-color: #333333;
-  color: #A8A8A8;
-  box-shadow: none; }
+  color: #A8A8A8; }
 
 /*
 *   Input Search
@@ -361,13 +360,13 @@ h6 {
   display: block;
   position: relative;
   margin: auto;
-  border-radius: 3px;
   border: 0;
-  padding: 5px 10px;
   outline: 0;
+  border-radius: 3px;
+  padding: 5px 10px;
   background-color: #fcfcfc;
-  border-top: 1px solid #bbb;
-  border-bottom: 1px solid #fff;
+  box-shadow: none;
+  border: 2px solid #e3e3e3;
   margin-bottom: 10px; }
   @media (min-width: 768px) {
     .input-search {
@@ -380,6 +379,33 @@ h6 {
       float: right; } }
 
 .input-search:focus {
-  background-color: #fff; }
+  background-color: #fff;
+  border: 2px solid #75C0D9;
+  box-sizing: border-box; }
+
+.input-search::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #ccc; }
+
+.input-search::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #ccc; }
+
+.input-search:-ms-input-placeholder {
+  /* IE 10+ */
+  color: #ccc; }
+
+.input-search:-moz-placeholder {
+  /* Firefox 18- */
+  color: #ccc; }
+
+/*
+*   Funky button moving workaround on active state
+*/
+.active-buttons-container {
+  vertical-align: top; }
+
+.active-buttons-container > button {
+  vertical-align: top; }
 
 /*# sourceMappingURL=style.css.map */
