--- a/RadioPlayer/scss/_buttons.scss
+++ b/RadioPlayer/scss/_buttons.scss
@@ -15,19 +15,21 @@
   font-size: 16px;
   outline: 0;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+  position: relative;
   font-family: 'Ubuntu', sans-serif;
 
   @include bp(pawn) {
+    padding: 7px 0;
+  }
+
+  @include bp(knight) {
     padding: 11px 0;
   }
 }
 
 .button[disabled="disabled"] {
   cursor: not-allowed;
-}
-
-.button:hover {
-  outline: 0;
+  border: none;
 }
 
 /*
@@ -36,12 +38,13 @@
 
 .button-add {
   background-color: #5CA6BF;
-  box-shadow: 0 2px 0 0 #478194;
+  // box-shadow: 0 3px 0 0 #478194;
+  border-bottom: 3px solid #478194;
   color: #fff;
   float: left;
 
   @include bp(pawn) {
-    float: none;;
+    float: none;
   }
 }
 
@@ -52,25 +55,28 @@
 .button-add:active {
   background-color: #569BB3;
   border-bottom: 0;
-  box-shadow:inset 0 2px 0 0 #478194;
+  border-top: 3px solid #478194;
+  // box-shadow:inset 0 3px 0 0 #478194;
 }
 
 .button-add[disabled="disabled"] {
   background-color: #8FBBC9;
   color: #DAE8ED;
   text-shadow: none;
-  box-shadow: none;
+  top: 3px;
+  // box-shadow: none;
 }
 
 /*
-*   Clear Tracks
+*   Clear
 */
 
 .button-clear {
   float: right;
   background-color: #D65469;
   color: #fff;
-  box-shadow: 0 2px 0 0 #AB4354;
+  border-bottom: 3px solid #AB4354;
+  // box-shadow: 0 3px 0 0 #AB4354;
 
   @include bp(pawn) {
     float: none;
@@ -85,14 +91,16 @@
 .button-clear:active {
   background-color: #CC5064;
   border-bottom: 0;
-  box-shadow:inset 0 2px 0 0 #AB4354;
+  border-top: 3px solid #AB4354;
+  // box-shadow:inset 0 3px 0 0 #AB4354;
 }
 
 .button-clear[disabled="disabled"] {
   background-color: #F09CA9;
   color: #FCD9DF;
-  box-shadow: none;
+  //box-shadow: none;
   text-shadow: none;
+  top: 3px;
 }
 
 
@@ -116,7 +124,8 @@
 
 .button-next {
   background-color: $d-dark-gray;
-  box-shadow: 0 2px 0 0 #0D0D0D;
+  border-bottom: 3px solid #0D0D0D;
+  // box-shadow: 0 3px 0 0 #0D0D0D;
   color: #fff;
 
   @include bp(knight) {
@@ -132,14 +141,15 @@
 
 .button-next:active {
   background-color: $d-dark-gray;
-  border-bottom: 0;
-  box-shadow:inset 0 2px 0 0 #0D0D0D;
+  border-bottom: none;
+  border-top: 3px solid #0D0D0D;
+  // box-shadow:inset 0 3px 0 0 #0D0D0D;
 }
 
 .button-next[disabled="disabled"] {
   background-color: #333333;
   color: #A8A8A8;
-  box-shadow: none;
+  // box-shadow: none;
 }
 
 /*
@@ -151,13 +161,13 @@
   display: block;
   position: relative;
   margin: auto;
-  border-radius: 3px;
   border: 0;
-  padding: 5px 10px;
   outline: 0;
+  border-radius: 3px;
+  padding: 5px 10px;
   background-color: #fcfcfc;
-  border-top: 1px solid #bbb;
-  border-bottom: 1px solid #fff;
+  box-shadow: none;
+  border: 2px solid #e3e3e3;
   margin-bottom: $vm-sm;
 
   @include bp(knight) {
@@ -173,4 +183,32 @@
 
 .input-search:focus {
   background-color: #fff;
+  border: 2px solid #75C0D9;
+  //box-shadow:inset 0 0 0 2px #75C0D9;
+  box-sizing: border-box;
+}
+
+// Placeholder text color browser workarounds
+.input-search::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #ccc;
+}
+.input-search::-moz-placeholder { /* Firefox 19+ */
+  color: #ccc;
+}
+.input-search:-ms-input-placeholder { /* IE 10+ */
+  color: #ccc;
+}
+.input-search:-moz-placeholder { /* Firefox 18- */
+  color: #ccc;
+}
+
+/*
+*   Funky button moving workaround on active state
+*/
+
+.active-buttons-container {
+  vertical-align: top;
+}
+.active-buttons-container > button {
+  vertical-align: top;
 }
